Prevent logo from getting squished at small screen sizes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,7 +17,7 @@
 
     img {
         display:block;
-        height:100%;
+        max-height:100%;
     }
 }
 
